// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Syntaxes are allowed in the chapter they are introduced 0: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": undefined,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 2: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "(() => true)();",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 4: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "true;",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 5: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "false;",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": false,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 6: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "'a string \\"\\" \\\\'\\\\'';",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": "a string \\"\\" ''",
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 7: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "31.4 + (-3.14e10) * -1 % 2 / 1.5;",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 31.4,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 8: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "1 === 1 && 1 < 2 && 1 <= 2 && 2 >= 1 && 2 > 1 || false;",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": true,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 9: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "true ? 1 : 2;",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 10: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "null;",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: null literals are not allowed.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 11: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "pair(1, null);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: null literals are not allowed.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 12: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "list(1);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Name list not declared.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 13: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "export function f(x) {
  return x;
}
f(5);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Export named declarations are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 14: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "export const x = 1;
x;",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Export named declarations are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 15: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "let i = 1;
while (i < 5) {
  i = i + 1;
}
i;",
  "displayResult": Array [],
  "numErrors": 3,
  "parsedErrors": "Line 1: Mutable variable declaration using keyword 'let' is not allowed.
Line 3: Assignment expressions are not allowed
Line 2: While statements are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 16: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "let i = 1;
for (i = 1; i < 5; i = i + 1) {
}
i;",
  "displayResult": Array [],
  "numErrors": 4,
  "parsedErrors": "Line 1: Mutable variable declaration using keyword 'let' is not allowed.
Line 2: Assignment expressions are not allowed
Line 2: Assignment expressions are not allowed
Line 2: For statements are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 17: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "let i = 1;
for (let j = 0; j < 5; j = j + 1) {
  if (j < 1) {
    continue;
  } else {
    i = i + 1;
    if (j > 2) {
      break;
    }
  }
}
i;",
  "displayResult": Array [],
  "numErrors": 8,
  "parsedErrors": "Line 1: Mutable variable declaration using keyword 'let' is not allowed.
Line 2: Mutable variable declaration using keyword 'let' is not allowed.
Line 2: Assignment expressions are not allowed
Line 4: Continue statements are not allowed
Line 6: Assignment expressions are not allowed
Line 8: Break statements are not allowed
Line 7: Missing \\"else\\" in \\"if-else\\" statement.
Line 2: For statements are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 18: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "[];",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Array expressions are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 19: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "[1, 2, 3];",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Array expressions are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 20: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "[1, 2, 3][1];",
  "displayResult": Array [],
  "numErrors": 2,
  "parsedErrors": "Line 1: Array expressions are not allowed
Line 1: Member expressions are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 21: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "let x = [1, 2, 3];
x[1];",
  "displayResult": Array [],
  "numErrors": 3,
  "parsedErrors": "Line 1: Array expressions are not allowed
Line 1: Mutable variable declaration using keyword 'let' is not allowed.
Line 2: Member expressions are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 22: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "let x = [1, 2, 3];
x[1] = 4;",
  "displayResult": Array [],
  "numErrors": 4,
  "parsedErrors": "Line 1: Array expressions are not allowed
Line 1: Mutable variable declaration using keyword 'let' is not allowed.
Line 2: Member expressions are not allowed
Line 2: Assignment expressions are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 23: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "let x = 3;
let y = 4;
let z = 5;
x = y = z = 6;
x;",
  "displayResult": Array [],
  "numErrors": 6,
  "parsedErrors": "Line 1: Mutable variable declaration using keyword 'let' is not allowed.
Line 2: Mutable variable declaration using keyword 'let' is not allowed.
Line 3: Mutable variable declaration using keyword 'let' is not allowed.
Line 4: Assignment expressions are not allowed
Line 4: Assignment expressions are not allowed
Line 4: Assignment expressions are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 24: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "function f(x, y, ...z) {
  return x + y;
}
f(...[1, 2]);",
  "displayResult": Array [],
  "numErrors": 3,
  "parsedErrors": "Line 1: Rest elements are not allowed
Line 4: Array expressions are not allowed
Line 4: Spread elements are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 25: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "({});",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Object expressions are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 25: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "({});",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": Object {},
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 26: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "({a: 1, b: 2});",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Object expressions are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 26: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "({a: 1, b: 2});",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": Object {
    "a": 1,
    "b": 2,
  },
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 27: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "({a: 1, b: 2})['a'];",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Object expressions are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 27: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "({a: 1, b: 2})['a'];",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 28: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "({a: 1, b: 2}).a;",
  "displayResult": Array [],
  "numErrors": 2,
  "parsedErrors": "Line 1: Object expressions are not allowed
Line 1: Dot abbreviations are not allowed.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 28: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "({a: 1, b: 2}).a;",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 29: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "({'a': 1, 'b': 2}).a;",
  "displayResult": Array [],
  "numErrors": 2,
  "parsedErrors": "Line 1: Object expressions are not allowed
Line 1: Dot abbreviations are not allowed.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 29: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "({'a': 1, 'b': 2}).a;",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 30: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "({1: 1, 2: 2})['1'];",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Object expressions are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 30: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "({1: 1, 2: 2})['1'];",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 31: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "const key = 'a';
({a: 1, b: 2})[key];",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 2: Object expressions are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 31: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "const key = 'a';
({a: 1, b: 2})[key];",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 32: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "let x = {a: 1, b: 2};
x.a = 3;",
  "displayResult": Array [],
  "numErrors": 2,
  "parsedErrors": "Line 1: Object expressions are not allowed
Line 2: Dot abbreviations are not allowed.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 32: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "let x = {a: 1, b: 2};
x.a = 3;",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 3,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 33: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "let x = {a: 1, b: 2};
x['a'] = 3;",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Object expressions are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 33: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "let x = {a: 1, b: 2};
x['a'] = 3;",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 3,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 34: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "let x = {a: 1, b: 2};
const key = 'a';
x[key] = 3;",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Object expressions are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 34: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "let x = {a: 1, b: 2};
const key = 'a';
x[key] = 3;",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 3,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 35: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "import defaultExport from \\"one_module\\";",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Import default specifiers are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 36: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "export default function f(x) {
  return x;
}
f(5);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Export default declarations are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 36: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "import defaultExport from \\"one_module\\";",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": undefined,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 36: passes 2`] = `
Object {
  "alertResult": Array [],
  "code": "export default function f(x) {
  return x;
}
f(5);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 5,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 37: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "const x = 1;
export default x;
x;",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 2: Export default declarations are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 37: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "const x = 1;
export default x;
x;",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 1,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 38: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "function square(x) {
  return x * x;
}
export { square as default };",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 4: Export default declarations are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 38: passes 1`] = `
Object {
  "alertResult": Array [],
  "code": "function square(x) {
  return x * x;
}
export { square as default };",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": undefined,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 39: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "import { default as x } from './a.js';",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Import default specifiers are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 40: fails a chapter below 1`] = `
Object {
  "alertResult": Array [],
  "code": "import * as a from 'one_module';",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Namespace imports are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;
